ver 0.24 (not yet released)
* protocol
  - "playlistfind"/"playlistsearch" have "sort" and "window" parameters
  - "save" can append to or replace an existing playlist
  - filter "prio" (for "playlistfind"/"playlistsearch")
  - limit "player" idle events to the current partition
  - operator "starts_with"
  - show PCRE support in "config" response
* archive
  - add option to disable archive plugins in mpd.conf
* input
  - curl: add "connect_timeout" configuration
* decoder
  - hybrid_dsd: remove
  - opus: implement bitrate calculation
  - wavpack: require libwavpack version 5
* player
  - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
  - "one-shot" consume mode
* tags
  - new tags "TitleSort", "Mood"
* switch to C++20
  - GCC 10 or clang 11 (or newer) recommended
* static partition configuration
* remove Haiku support

ver 0.23.11 (not yet released)
* macOS: fix build failure "no archive members specified"
* Android/Windows
  - update OpenSSL to 3.0.7

ver 0.23.10 (2022/10/14)
* storage
  - curl: fix file time stamps
* decoder
  - ffmpeg: fix libfmt 9 compiler warning
* encoder
  - flac: fix failure when libFLAC is built without Ogg support
* output
  - alsa: fix crash bug
* Windows
  - log to stdout by default, don't require "log_file" setting

ver 0.23.9 (2022/08/18)
* input
  - cdio_paranoia: add options "mode" and "skip"
* decoder
  - ffmpeg: support FFmpeg 5.1
* filter
  - replay gain: fix delayed volume display with handler=mixer
* output
  - pipewire: set app icon
* fix bogus volume levels with multiple partitions
* improve iconv detection
* macOS: fix macOS 10 build problem (0.23.8 regression)
* Android
  - load mpd.conf from app data directory

ver 0.23.8 (2022/07/09)
* storage
  - curl: fix crash if web server does not understand WebDAV
* input
  - cdio_paranoia: fix crash if no drive was found
  - cdio_paranoia: faster cancellation
  - cdio_paranoia: don't scan for replay gain tags
  - pipewire: fix playback of very short tracks