@@ -235,7 +235,9 @@ of:
   (album == 'BAR'))`
 
 The :command:`find` commands are case sensitive, while
-:command:`search` and related commands ignore case.
+:command:`search` and related commands ignore case.  The latter also
+applies `Unicode normalization <https://unicode.org/reports/tr15/>`__
+if MPD was compiled with `ICU <https://icu.unicode.org/>`__ support.
 
 Prior to MPD 0.21, the syntax looked like this::
 
